--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             --text-primary: #1e293b;
             --text-secondary: #64748b;
             --border-color: #e2e8f0;
+            --icon-color: #64748b;
         }
 
         /* Dark theme variables */
@@ -24,6 +25,7 @@
             --text-primary: #f1f5f9;
             --text-secondary: #cbd5e1;
             --border-color: #334155;
+            --icon-color: #cbd5e1;
         }
 
         * {
@@ -58,6 +60,13 @@
             display: flex;
             align-items: center;
             gap: 0.5rem;
+        }
+
+        .theme-icon {
+            width: 20px;
+            height: 20px;
+            color: var(--icon-color);
+            transition: color 0.3s ease;
         }
 
         .theme-toggle-label {
@@ -283,12 +292,24 @@
 <body>
     <div class="container">
         <div class="theme-toggle">
-            <span>☀️</span>
+            <svg xmlns="http://www.w3.org/2000/svg" class="theme-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <circle cx="12" cy="12" r="5"/>
+                <line x1="12" y1="1" x2="12" y2="3"/>
+                <line x1="12" y1="21" x2="12" y2="23"/>
+                <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/>
+                <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/>
+                <line x1="1" y1="12" x2="3" y2="12"/>
+                <line x1="21" y1="12" x2="23" y2="12"/>
+                <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/>
+                <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/>
+            </svg>
             <label class="theme-toggle-label">
                 <input type="checkbox" class="theme-toggle-input" onchange="toggleTheme()">
                 <span class="theme-toggle-slider"></span>
             </label>
-            <span>🌙</span>
+            <svg xmlns="http://www.w3.org/2000/svg" class="theme-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/>
+            </svg>
         </div>
         <div class="calculator">
             <h1>Crypto Calculator</h1>
